Updates to the caDSR API freestyle update indices job & library references